--- a/scala/parallel-programming/index.html
+++ b/scala/parallel-programming/index.html
@@ -625,6 +625,128 @@ List(1,3,8).reduceRight((s,x) =&gt; s - x) == 1 - (3 - 8) == 6
   out(last + 1) = f(out(last), inp(last))
 }
 </code></pre>
+
+<h2 id="week3-data-parallelism">Week3 Data-Parallelism</h2>
+<p>Previously, we learned about task-parallel programming.</p>
+<blockquote>
+<p>A form of parallelization that distributes execution processes across computing nodes.</p>
+</blockquote>
+<p>We know how to express parallel programs with task and parallel constructs.
+Next, we learn about the data-parallel programming.</p>
+<blockquote>
+<p>A form of parallelization that distributes data across computing nodes.</p>
+</blockquote>
+<p>The simplest form of data-parallel programming is the parallel for loop.</p>
+<pre><code class="scala">def initializeArray(xs: Array[Int])(v: Int): Unit = {
+  for (i &lt;- (0 until xs.length).par) {
+    xs(i) = v
+  }
+}
+</code></pre>
+
+<p>Range에 <code>.par</code>를 붙이면 <code>parallel range</code>로 변환된다.
+parallel loop는 different processors에서 concurrently with each other로 실행될 것이다
+parallel loop는 어떠한 값도 리턴하지 않는다
+그렇기에 이와 interact할 수 있는 유일한 방법은 assign밖에 없다. 이는 side effect를 유발할 수 있음을 의미한다. = not very functional 하다.</p>
+<p><em>Workload</em> 란 각각의 input element에 대해서 이를 실행하는데 필요한 amount of work 이다.
+different data-parallel programs는 different workloads를 갖는다.
+(= input element에 따라서 수행량이 다르다.)
+<em>data-parallel scheduler</em> 는 이런 different workloads를 efficiently balance 해주기 때문에 프로그래머가 이를 직접 관리할 필요는 없다.</p>
+<p>Scala에서 대부분의 collection operation은 data-parallel을 지원한다.</p>
+<pre><code class="scala">(1 until 1000).par
+  .filter(n =&gt; n % 3 == 0)
+  .count(n =&gt; n.toString == n.toString.reverse)
+</code></pre>
+
+<p>filter와 count도 data parallel operation을 지원한다.</p>
+<p>하지만 몇몇 collection operations는 parallelizable 하지 않다.</p>
+<p>foldLeft를 이용한 sum을 생각해보자.</p>
+<pre><code class="scala">def sum(xs: Array[Int]): Int = {
+  xs.par.foldLeft(0)(_ + _)
+}
+</code></pre>
+
+<p>이는 parallel 하게 수행되는가?
+아니다.</p>
+<p>먼저 foldLeft의 signature를 살펴보자.</p>
+<pre><code class="scala">def foldLeft[B](z: B)(f: (B, A) =&gt; B): B
+</code></pre>
+
+<p>함수 f를 보면 A와 B 타입을 받아서 B 타입으로 만들어 준다.
+이 의미는 foldLeft를 연속적으로 수행할 때 먼저 수행한 foldLeft의 결과를 받고 나서야 다음 foldLeft를 계산할 수 있음을 의미한다.(= 참조 투명하지 않다.)</p>
+<p>이와 같은 종류의 foldRight, reduceLeft, reduceRight, scanLeft and scanRight는 동일한 문제를 갖는다.</p>
+<p>만약 이를 parallel하게 하고 싶다면 아래와 같은 정의가 필요하다.</p>
+<pre><code class="scala">def fold(z: A)(f: (A, A) =&gt; A): A
+</code></pre>
+
+<p>이를 이용하면 max를 아래와 같이 구현할 수 잇다.</p>
+<pre><code class="scala">def max(xs: Array[Int]): Int = {
+  xs.par.fold(Int.MinValue)(math.max)
+}
+</code></pre>
+
+<p>data-parallel operation을 수행할 때는 몇 가지 주의 사항이 있다.</p>
+<ol>
+<li>same memory locations를 수정하는 것을 피해야 한다.</li>
+</ol>
+<pre><code class="scala">def intersection(a: GenSet[Int], b: GenSet[Int]): Set[Int] = {
+  val result = mutable.Set[Int]()
+  for (x &lt;- a) if (b contains x) result += x
+  result
+}
+
+intersection((0 until 1000).toSet, (0 until 1000 by 4).toSet)
+intersection((0 until 1000).par.toSet, (0 until 1000 by 4).par.toSet)
+</code></pre>
+
+<p>위에서 .par로 실행한 코드는 parallel하게 동작하면서 result라는 Set을 변경한다.
+비록 여기에선 오류가 발생하지 않았지만 이는 side effect를 초래할 수 있다.</p>
+<p>이를 해결하기 위해선 아래와 같은 방법이 있다.</p>
+<p>1) use a concurrent collection, which can be mutated by multiple threads</p>
+<pre><code class="scala">import java.util.concurrent._
+def intersection(a: GenSet[Int], b: GenSet[Int]) = {
+val result = new ConcurrentSkipListSet[Int]()
+for (x &lt;- a) if (b contains x) result += x result
+}
+intersection((0 until 1000).toSet, (0 until 1000 by 4).toSet)
+intersection((0 until 1000).par.toSet, (0 until 1000 by 4).par.toSet)
+</code></pre>
+
+<p>2) correct combinator를 사용한다.
+여기에서는 filter를 사용하면 된다.</p>
+<pre><code class="scala">def intersection(a: GenSet[Int], b: GenSet[Int]): GenSet[Int] = {
+  if (a.size &lt; b.size) a.filter(b(_))
+  else b.filter(a(_))
+}
+intersection((0 until 1000).toSet, (0 until 1000 by 4).toSet)
+intersection((0 until 1000).par.toSet, (0 until 1000 by 4).par.toSet)
+</code></pre>
+
+<ol>
+<li>data-parallel operation 수행 중일 때 parallel collection을 수정하면 절대 안된다. 또한 수정된 parallel collection을 읽는 것도 절대 안된다.</li>
+</ol>
+<pre><code class="scala">val graph = mutable.Map[Int, Int]() ++= (0 until 100000).map(i =&gt; (i, i + 1)) graph(graph.size - 1) = 0
+for ((k, v) &lt;- graph.par) graph(k) = graph(v)
+val violation = graph.find({
+  case (i, v) =&gt; v != (i + 2) % graph.size
+})
+println(s”violation: $violation”)
+</code></pre>
+
+<p>위 코드는 프로세스를 진행하면서 collection을 수정한다.</p>
+<p>위의 오류를 피하기 위해 아래의 collection을 사용할 수 있다.
+TrieMap Collection은 이런 rule에 대해 exception을 갖고 있다.</p>
+<pre><code class="scala">val graph = concurrent.TrieMap[Int, Int]() ++= (0 until 100000).map(i =&gt; (i, i + 1))
+graph(graph.size - 1) = 0
+val previous = graph.snapshot()
+for ((k, v) &lt;- graph.par)
+  graph(k) = previous(v)
+
+val violation = graph.find({
+  case (i, v) =&gt; v != (i + 2) % graph.size
+})
+println(s”violation: $violation”)
+</code></pre>
               
             </div>
           </div>
